# Larkoffice-IM-Agent

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  pyproject.toml  test.py  test_gate.py  test_workflow.py  tmp_chat.json
.claude/: settings.local.json
.pip_probe/charset_normalizer-3.4.7.dist-info/: RECORD
.pip_probe/httpx-0.28.1.dist-info/: RECORD
.pip_probe/lark_oapi-1.4.24.dist-info/: RECORD
.pip_probe/websockets-16.0.dist-info/: RECORD
agent/: IntentSystem.py  card_templates.py  config.py  executor.py  feishu_bot.py  flow.py  group_two_stage_gate.py  main.py  planner.py
agent/workflows/: content_structure.py  im_to_pptx.py
card/: 机器人@页.card
frontend/zimo-web-full-visual-tuned/: index.html  package-lock.json  package.json
frontend/zimo-web-full-visual-tuned/public/fonts/: README.md
frontend/zimo-web-full-visual-tuned/src/: main.tsx  style.css
skills/lark-workflow-content-structure/: SKILL.md
skills/lark-workflow-im-to-pptx/: SKILL.md
