[project]
name = "feishu-agent"
version = "0.1.0"
description = "Agent-Pilot: Feishu intelligent agent from IM conversation to presentation"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
feishu-agent = "agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
